Bonus Praktikum Week 04 - 2472008

--- a/Monkey-2472008.html
+++ b/Monkey-2472008.html
@@ -29,7 +29,7 @@
 		
 		<hr class="garisLebihPendek">
 		
-		<p class="ketikan jarak35">
+		<p class="ketikan jarak35 jarak40top">
 			Day Shrink Buffet Security Course Crouch User Biscuit Restrict Nail Timber Unity Mirror Youth Opposite Tissue Favour Demand Beach Spy Referee Tooth Retain Reporter Banish Future Voucher Eavesdrop Eliminate Employ Stun Recording Pillow Storage Isolation Girl hest Passive Index Cool Degree Salad Recommend <span class="tebel">I</span> Default Team Talk Shadow Amputate Quest DIsturbance <span class="tebel">Am</span> Activate Manufacture Constant Hardshib So Freight Reach Chew Mislead Oral <span class="tebel">A</span> Royalty Traction Resignation <span class="tebel">Chill</span> Wisecrack Illness Fastidious <span class="tebel">Guy</span> Courtesy Quiet Frequency <span class="tebel">Who</span> Revolutionary Slogan Labour Unlike Please <span class="tebel">Is</span> Lend Persist Conservative <span class="tebel">Chilling</span> Aplied Examble <span class="tebel">:3</span> flourish Claim Burst Tasty Democratic Action Affair Fat Zone Spin Bother Line Track Safe Failure Hut Gaffe Degree Stake
 		</p>
 		
